--- a/templates/about.page.gohtml
+++ b/templates/about.page.gohtml
@@ -5,19 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>This is about page.</h1>
-                <hr>
-                <p>This is a paragraph in about.</p>
-
-                <p>This cam from the template: {{index .StringMap "test"}}</p>
-
-                <p>
-                    {{if ne (index .StringMap "remote_ip") ""}}
-                        Your remote IP address is {{index .StringMap "remote_ip"}}
-                    {{else}}
-                        I don't know your ip address yet.Visit the <a href="/">Home page</a> so I can set it.
-                    {{end}}
-                </p>
+                <h1>This will be about page.</h1>
             </div>
         </div>
     </div>
