--- a/templates/search-availability.page.gohtml
+++ b/templates/search-availability.page.gohtml
@@ -10,7 +10,8 @@
             <div class="col-md-5">
                 <h1 class="mt-5">Search for availability.</h1>
 
-                <form action="" method="get" novalidate class="needs-validation">
+                <form action="/search-availability" method="post" novalidate class="needs-validation">
+                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                     <div class="row">
                         <div class="col">
                             <div class="row" id="reservation-dates">
