--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -176,19 +176,16 @@
                     title = "",
                 } = c;
 
-                const {value: formValues} = await Swal.fire({
+                const {value: result} = await Swal.fire({
                     title: title,
                     html:msg,
                     focusConfirm: false,
                     backdrop:true,
                     showCancelButton:true,
-                    willOpen: () => {
-                        const elem = document.getElementById("reservation-dates-modal");
-                        const rp = new DateRangePicker(elem,{
-                            format:'yyyy-mm-dd',
-                            showOnFocus:true,
-                        })
-
+                    willOpen:() => {
+                        if (c.willOpen !== undefined) {
+                            c.willOpen()
+                        }
                     },
                     preConfirm: () => {
                         return [
@@ -197,12 +194,24 @@
                         ];
                     },
                     didOpen:() => {
-                        document.getElementById("start").removeAttribute('disabled');
-                        document.getElementById("end").removeAttribute('disabled');
+                        if( c.didOpen !== undefined) {
+                            c.didOpen();
+                        }
                     }
                 });
-                if (formValues) {
-                    Swal.fire(JSON.stringify(formValues));
+                if ( result ){
+                    // it's not because they clicked the cancel button.
+                    if (result.dismiss !== Swal.DismissReason.cancel) {
+                        if (result.value !== ""){
+                            if(c.callback !== undefined) {
+                                c.callback(result);
+                            }
+                        }else {
+                            c.callback(false);
+                        }
+                    }else {
+                        c.callback(false);
+                    }
                 }
             }
 
