--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -118,6 +118,17 @@
                 confirmButtonText: confirmationButton
             })
         }
+        {{with .Error}}
+        notify("{{.}}","error")
+        {{end}}
+
+        {{with .Flash}}
+        notify("{{.}}","success")
+        {{end}}
+
+        {{with .Warning}}
+        notify("{{.}}","warning")
+        {{end}}
 
         function Prompt() {
             let toast = function (c) {
