--- a/templates/make-reservation.page.gohtml
+++ b/templates/make-reservation.page.gohtml
@@ -5,11 +5,19 @@
     <div class="container">
         <div class="row">
             <div class="col pt-2">
-                <h1>Make reservation</h1>
-                <h5>Reservation Details</h5>
                 {{$res := index .Data "reservation" }}
+                <h1>Make reservation</h1>
+                <p><strong>Reservation Details</strong><br>
+                    Room: {{$res.Room.RoomName}} <br>
+                    Arrival: {{index .StringMap "start_date"}} <br>
+                    Departure: {{index .StringMap "end_date"}} <br>
+                </p>
                 <form method="post" action="/make-reservation" class="" novalidate>
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+                    <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
+                    <input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}">
+                    <input type="hidden" name="room_id" value="{{$res.RoomID}}" />
+
                     <div class="mt-4">
                         <label class="form-label" for="first_name">First Name:</label>
                     {{with .Form.Errors.Get "first_name"}}
@@ -25,6 +33,8 @@
                         {{end}}
                         <input type="text" name="last_name" id="last_name" class="form-control {{with  .Form.Errors.Get "last_name"}}is-invalid {{end}}" value="{{$res.LastName}}" required autocomplete="off">
                     </div>
+
+
 
                     <div class="mt-2">
                         <label for="email" class="form-label">Email:</label>
