--- a/templates/generals.page.gohtml
+++ b/templates/generals.page.gohtml
@@ -56,6 +56,7 @@
                     const rp = new DateRangePicker(elem,{
                         format:'yyyy-mm-dd',
                         showOnFocus:true,
+                        minDate: new Date(),
                     })
 
                 },
@@ -64,21 +65,24 @@
                     document.getElementById("end").removeAttribute('disabled');
                 },
                 callback:function (result) {
-                    console.log("Called");
 
                     let form = document.getElementById("check-availability-form");
                     let formData = new FormData(form);
                     formData.append("csrf_token","{{.CSRFToken}}");
+                    formData.append("room_id","1");
 
                     fetch('/search-availability-json',{
                         method:"post",
                         body: formData,
+
                     })
                         .then(response => response.json())
                         .then(data => {
-                            console.log(data);
-                            console.log(data.ok);
-                            console.log(data.message);
+                            if (data.ok) {
+                                console.log("room is available")
+                            }else{
+                                console.log("room is unavailable")
+                            }
                         })
                 }
             });
