debugging for availability by Room

--- a/templates/generals.page.gohtml
+++ b/templates/generals.page.gohtml
@@ -33,7 +33,7 @@
     <script>
         document.getElementById("check-availability-button").addEventListener("click", function () {
             let html = `
-        <form id="check-availability-form" action="" method="post" novalidate class="needs-validation">
+        <form id="check-availability-form" action="/search-availability-json" method="post" novalidate class="needs-validation">
             <div class="row">
                 <div class="col">
                     <div class="row" id="reservation-dates-modal">
@@ -81,7 +81,9 @@
                             if (data.ok) {
                                 console.log("room is available")
                             }else{
-                                console.log("room is unavailable")
+                                attention.error({
+                                    msg:"No availability",
+                                })
                             }
                         })
                 }
