--- a/templates/majors.page.gohtml
+++ b/templates/majors.page.gohtml
@@ -41,10 +41,10 @@
                 <div class="col">
                     <div class="row" id="reservation-dates-modal">
                         <div class="col">
-                            <input disabled type="text" class="form-control" required name="start" id="start" placeholder="Arrival">
+                            <input autocomplete="off"  type="text" class="form-control" required name="start" id="start" placeholder="Arrival">
                         </div>
                         <div class="col">
-                            <input disabled type="text" class="form-control" required name="end" id="end" placeholder="Departure">
+                            <input autocomplete="off"  type="text" class="form-control" required name="end" id="end" placeholder="Departure">
                         </div>
                     </div>
                 </div>
