Connecting the rooms page to the make reservation page

--- a/templates/reservation-summary.page.gohtml
+++ b/templates/reservation-summary.page.gohtml
@@ -27,7 +27,7 @@
                         </tr>
                         <tr>
                             <td>Departure:</td>
-                            <td>{{index .StringMap "start_date"}}</td>
+                            <td>{{index .StringMap "end_date"}}</td>
                         </tr>
                         <tr>
                             <td>Email:</td>
