--- a/templates/majors.page.gohtml
+++ b/templates/majors.page.gohtml
@@ -84,8 +84,8 @@
                             if (data.ok) {
                                 attention.custom({
                                     icon:"success",
-                                    msg: "<p>Room is available!</p>"
-                                        + "<p><a href='#' class='btn btn-primary'>Book Now</a></p>",
+                                    msg: `<p>Room is available!</p>
+                                    <p><a href='/book-room?id=${data.room_id}&s=${data.start_date}&e=${data.end_date}' class='btn btn-primary'>Book Now</a></p>`,
                                     showConfirmButton:false
                                 })
                             }else{
