--- a/templates/majors.page.gohtml
+++ b/templates/majors.page.gohtml
@@ -34,68 +34,6 @@
 
 {{define "js"}}
     <script>
-        document.getElementById("check-availability-button").addEventListener("click", function () {
-            let html = `
-        <form id="check-availability-form"  novalidate class="needs-validation">
-            <div class="row">
-                <div class="col">
-                    <div class="row" id="reservation-dates-modal">
-                        <div class="col">
-                            <input disabled autocomplete="off" type="text" class="form-control" required name="start_date" id="start" placeholder="Arrival">
-                        </div>
-                        <div class="col">
-                            <input disabled autocomplete="off" type="text" class="form-control" required name="end_date" id="end" placeholder="Departure">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </form>
-        `;
-            attention.custom({
-                msg:html,
-                title:"Choose your dates.",
-                willOpen: () => {
-                    const elem = document.getElementById("reservation-dates-modal");
-                    const rp = new DateRangePicker(elem,{
-                        format:'yyyy-mm-dd',
-                        showOnFocus:true,
-                        minDate: new Date(),
-                    })
-
-                },
-                didOpen:() => {
-                    document.getElementById("start").removeAttribute('disabled');
-                    document.getElementById("end").removeAttribute('disabled');
-                },
-                callback:function (result) {
-
-                    let form = document.getElementById("check-availability-form");
-                    let formData = new FormData(form);
-                    formData.append("csrf_token","{{.CSRFToken}}");
-                    formData.append("room_id","2");
-
-                    fetch('/search-availability-json',{
-                        method:"post",
-                        body: formData,
-
-                    })
-                        .then(response => response.json())
-                        .then(data => {
-                            if (data.ok) {
-                                attention.custom({
-                                    icon:"success",
-                                    msg: `<p>Room is available!</p>
-                                    <p><a href='/book-room?id=${data.room_id}&s=${data.start_date}&e=${data.end_date}' class='btn btn-primary'>Book Now</a></p>`,
-                                    showConfirmButton:false
-                                })
-                            }else{
-                                attention.error({
-                                    msg:"Room is Not availability!",
-                                })
-                            }
-                        })
-                }
-            });
-        })
+        CalenderPopup("2","{{.CSRFToken}}")
     </script>
 {{end}}
