--- a/templates/search-availability.page.gohtml
+++ b/templates/search-availability.page.gohtml
@@ -16,11 +16,11 @@
                         <div class="col">
                             <div class="row" id="reservation-dates">
                                 <div class="col">
-                                    <input autocomplete="off" required type="text" name="start" class="form-control"
+                                    <input autocomplete="off" required type="text" name="start_date" class="form-control"
                                            placeholder="Arrival date">
                                 </div>
                                 <div class="col">
-                                    <input autocomplete="off" required type="text" name="end" class="form-control" placeholder="Departure">
+                                    <input autocomplete="off" required type="text" name="end_date" class="form-control" placeholder="Departure">
                                 </div>
                             </div>
                         </div>
