--- a/templates/login.page.gohtml
+++ b/templates/login.page.gohtml
@@ -1,17 +1,18 @@
-{{template "base"}}
+{{template "base" .}}
     {{define "content"}}
     <div class="container">
         <div class="row">
             <div class="col">
                 <h1>Login</h1>
 
-                <form action="">
+                <form method="post" action="/user/login" novalidate>
+                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                     <div class="mt-4">
                         <label class="form-label" for="email">Email</label>
                         {{with .Form.Errors.Get "email"}}
                             <label class="text-danger">{{.}}</label>
                         {{end}}
-                        <input type="email" name="email" id="email" class="form-control
+                        <input type="email" name="email" id="email" value="" class="form-control
                         {{with  .Form.Errors.Get "email"}}is-invalid {{end}}" required autocomplete="off">
                     </div>
                     <div class="">
@@ -19,7 +20,7 @@
                         {{with .Form.Errors.Get "password"}}
                             <label class="text-danger">{{.}}</label>
                         {{end}}
-                        <input type="password" name="password" id="password" class="form-control
+                        <input type="password" name="password" id="password" value="" class="form-control
                         {{with  .Form.Errors.Get "password"}}is-invalid {{end}}" required autocomplete="off">
                     </div>
 
