--- a/templates/admin.layout.gohtml
+++ b/templates/admin.layout.gohtml
@@ -17,9 +17,14 @@
         <link rel="stylesheet" href="/static/admin/css/style.css">
         <!-- endinject -->
         <link rel="shortcut icon" href="/static/admin/images/favicon.png"/>
+{{/*        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"*/}}
+{{/*              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">*/}}
         <style>
             .content-wrapper{
                 background-color: white;
+            }
+            label{
+                font-weight: bold;
             }
         </style>
 
@@ -139,6 +144,9 @@
     <!-- Custom js for this page-->
     <script src="/static/admin/js/dashboard.js"></script>
     <!-- End custom js for this page-->
+{{/*    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"*/}}
+{{/*            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"*/}}
+{{/*            crossorigin="anonymous"></script>*/}}
 
     {{block "js" . }}
 
