--- a/templates/admin-reservations-show.page.gohtml
+++ b/templates/admin-reservations-show.page.gohtml
@@ -52,11 +52,48 @@
             </div>
 
             <hr>
-
-            <input type="submit" class="btn btn-primary" value="Save">
-            <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
+            <div class="d-flex justify-content-between flex-wrap gap-4">
+                <div class="d-flex gap-2 flex-wrap justify-content-sm-center">
+                    <input type="submit" class="btn btn-primary" value="Save">
+                    <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
+                    <a href="#!" class="btn btn-info"  id="process-res-btn">Mark as Processed!</a>
+                </div>
+                <div>
+                    <a href="#!" class="btn btn-danger"  id="delete-res-btn">Delete</a>
+                </div>
+            </div>
         </form>
     </div>
 
 {{end}}
 
+{{define "js"}}
+    {{$src := index .StringMap "src"}}
+    {{$res := index .Data "reservation"}}
+
+<script>
+    document.getElementById("process-res-btn").addEventListener("click",function (event) {
+        attention.custom({
+            icon:"warning",
+            msg:"Are you sure you want to approve?",
+            callback: function (result) {
+                if (result) {
+                    window.location.href = "/admin/process-reservation/{{$src}}/{{$res.ID}}"  ;
+                }
+            }
+        })
+    })
+
+    document.getElementById("delete-res-btn").addEventListener("click",function (event) {
+        attention.custom({
+            icon:"warning",
+            msg:"Are you sure you want to approve?",
+            callback: function (result) {
+                if (result) {
+                    window.location.href = "/admin/delete-reservation/{{$src}}/{{$res.ID}}"  ;
+                }
+            }
+        })
+    })
+</script>
+{{end}}
