--- a/templates/admin.layout.gohtml
+++ b/templates/admin.layout.gohtml
@@ -17,8 +17,7 @@
         <link rel="stylesheet" href="/static/admin/css/style.css">
         <!-- endinject -->
         <link rel="shortcut icon" href="/static/admin/images/favicon.png"/>
-{{/*        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"*/}}
-{{/*              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">*/}}
+        <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
         <style>
             .content-wrapper{
                 background-color: white;
@@ -26,6 +25,9 @@
             label{
                 font-weight: bold;
             }
+            .notie-container {
+                z-index: 9999;
+             }
         </style>
 
         {{block "css" . }}
@@ -140,14 +142,44 @@
     <script src="/static/admin/js/hoverable-collapse.js"></script>
     <script src="/static/admin/js/template.js"></script>
     <script src="/static/admin/js/todolist.js"></script>
+    <script src="https://unpkg.com/notie"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/static/js/app.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page-->
     <script src="/static/admin/js/dashboard.js"></script>
     <!-- End custom js for this page-->
-{{/*    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"*/}}
-{{/*            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"*/}}
-{{/*            crossorigin="anonymous"></script>*/}}
 
+    <script>
+        let attention = Prompt();
+
+        function notify(msg, msgType) {
+            notie.alert({
+                type: msgType,
+                text: msg,
+            })
+        }
+
+        function notifyModal(title, text, icon, confirmationButton) {
+            Swal.fire({
+                title: title,
+                html: text,
+                icon: icon,
+                confirmButtonText: confirmationButton
+            })
+        }
+        {{with .Error}}
+        notify("{{.}}","error")
+        {{end}}
+
+        {{with .Flash}}
+        notify("{{.}}","success")
+        {{end}}
+
+        {{with .Warning}}
+        notify("{{.}}","warning")
+        {{end}}
+    </script>
     {{block "js" . }}
 
     {{end}}
