--- a/templates/admin-reservations-calendar.page.gohtml
+++ b/templates/admin-reservations-calendar.page.gohtml
@@ -5,11 +5,14 @@
 {{end}}
 
 {{define "content"}}
+    {{$now := index .Data "now"}}
+    {{$rooms := index .Data "rooms" }}
+    {{$dim := index .IntMap "days_in_month" }}
     <div class="col-md-12">
 
         <div class="text-center">
             <h3>
-                {{index .StringMap "this_month"}} {{index .StringMap "this_month_year"}}
+                {{formatDate $now "January"}} {{formatDate $now "2006"}}
             </h3>
         </div>
 
@@ -28,6 +31,33 @@
             </div>
         </div>
 
-        <div class="clearfix"></div>
+        {{range $rooms}}
+            {{$roomID := .ID}}
+
+            <h4 class="mt-4">
+                {{ .RoomName}}
+            </h4>
+            <div class="table-responsive">
+                <table class="table table-bordered table-sm">
+                    <tr class="table-dark">
+                        {{range $index := iterate $dim}}
+                            <td class="text-center">
+                                {{add $index 1}}
+                            </td>
+                        {{end}}
+                    </tr>
+
+                    <tr>
+                        {{range $index := iterate $dim}}
+                            <td class="text-center">
+                                <input type="checkbox">
+                            </td>
+                        {{end}}
+                    </tr>
+                </table>
+            </div>
+
+        {{end}}
+
     </div>
 {{end}}
