--- a/templates/admin-reservations-show.page.gohtml
+++ b/templates/admin-reservations-show.page.gohtml
@@ -55,7 +55,11 @@
             <div class="d-flex justify-content-between flex-wrap gap-4">
                 <div class="d-flex gap-2 flex-wrap justify-content-sm-center">
                     <input type="submit" class="btn btn-primary" value="Save">
+                    {{if eq $src "cal"}}
+                        <a href="#!" onclick="window.history.go(-1)" class="btn btn-warning">Cancel</a>
+                    {{else}}
                     <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
+                    {{end}}
                     <a href="#!" class="btn btn-info"  id="process-res-btn">Mark as Processed!</a>
                 </div>
                 <div>
