--- a/templates/admin-reservations-show.page.gohtml
+++ b/templates/admin-reservations-show.page.gohtml
@@ -16,6 +16,8 @@
 
         <form method="post" action="/admin/reservations/{{$src}}/{{$res.ID}}" class="" novalidate>
             <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+            <input type="hidden" name="year" value="{{index .StringMap "year"}}">
+            <input type="hidden" name="month" value="{{index .StringMap "month"}}">
 
             <div class="mt-4">
                 <label class="form-label" for="first_name">First Name:</label>
@@ -60,7 +62,10 @@
                     {{else}}
                     <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
                     {{end}}
+                    {{if eq $res.Processed 1}}
+                    {{else}}
                     <a href="#!" class="btn btn-info"  id="process-res-btn">Mark as Processed!</a>
+                    {{end}}
                 </div>
                 <div>
                     <a href="#!" class="btn btn-danger"  id="delete-res-btn">Delete</a>
@@ -82,19 +87,20 @@
             msg:"Are you sure you want to approve?",
             callback: function (result) {
                 if (result) {
-                    window.location.href = "/admin/process-reservation/{{$src}}/{{$res.ID}}"  ;
+                    window.location.href = "/admin/process-reservation/{{$src}}/{{$res.ID}}/do?y={{index .StringMap "year"}}&m={{index .StringMap "month"}}"  ;
                 }
             }
         })
     })
 
     document.getElementById("delete-res-btn").addEventListener("click",function (event) {
+        console.log("Clicked")
         attention.custom({
             icon:"warning",
             msg:"Are you sure you want to approve?",
             callback: function (result) {
                 if (result) {
-                    window.location.href = "/admin/delete-reservation/{{$src}}/{{$res.ID}}"  ;
+                    window.location.href = "/admin/delete-reservation/{{$src}}/{{$res.ID}}/do?y={{index .StringMap "year"}}&m={{index .StringMap "month"}}";
                 }
             }
         })
