--- a/templates/make-reservation.page.gohtml
+++ b/templates/make-reservation.page.gohtml
@@ -9,13 +9,13 @@
                 <h1>Make reservation</h1>
                 <p><strong>Reservation Details</strong><br>
                     Room: {{$res.Room.RoomName}} <br>
-                    Arrival: {{index .StringMap "start_date"}} <br>
-                    Departure: {{index .StringMap "end_date"}} <br>
+                    Arrival: {{$res.StartDate}} <br>
+                    Departure: {{$res.EndDate}} <br>
                 </p>
                 <form method="post" action="/make-reservation" class="" novalidate>
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
-                    <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
-                    <input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}">
+                    <input type="hidden" name="start_date" value="{{humanDate $res.StartDate}}">
+                    <input type="hidden" name="end_date" value="{{humanDate $res.EndDate}}">
                     <input type="hidden" name="room_id" value="{{$res.RoomID}}" />
 
                     <div class="mt-4">
